--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -10,3 +10,9 @@ $screen-lg: 75rem;
 $screen-xlg: 80rem;
 
 $transition-time: .15s;
+
+$box-shadow-bottom:  0 10px 10px rgba(0,0,0,0.01), 0 6px 4px rgba(0,0,0,0.13);
+$box-shadow-top:  0 -5px 10px rgba(0, 0, 0, 0.01), 0 -6px 4px rgba(0, 0, 0, 0.13);
+$box-shadow-strong: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+$box-shadow-light: 8px 24px 24px 0 rgba(0,0,0,.09);
+
