--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -3,13 +3,15 @@
   padding: 65px 0;
 
   .link {
-    margin-top: 25px;
-
+    position: relative;
+    top: 30px;
     @include breakpoint(sm) {
+      top: 80px;
       margin-top: 0;
     }
   }
   .link--impressum {
     text-transform: uppercase;
+    font-size: em(14px);
   }
 }
