--- a/src/css/components/_intro.scss
+++ b/src/css/components/_intro.scss
@@ -5,36 +5,18 @@
   @include breakpoint(md) {
     padding: 80px 0;
   }
+  
+  h2 {
+    margin-bottom: 0;
 
-  h1 {
-    max-width: 300px;
-    font-size: em(16px);
-    font-weight: 400;
-    margin-top: 0;
-
-    @include breakpoint(md) {
-      max-width: 100%;
-      font-size: em(24px);
+    @include breakpoint(sm) {
+      margin-bottom: 15px;
     }
   }
 
   .intro__container {
     @include breakpoint (sm) {
       margin-right: 60px;
-    }
-  }
-
-  .address__container {
-    margin-top: 25px;
-
-    .logo__wrapper {
-      display: none;
-      
-      @include breakpoint(sm) {
-        display: block;
-        width: 150px;
-        margin-bottom: 25px;
-      }
     }
   }
 }
