--- a/src/css/components/_leistungen.scss
+++ b/src/css/components/_leistungen.scss
@@ -31,10 +31,16 @@
     margin: 35px 0;
     padding: 25px;
     border: 1px solid #e5e5e5;
-    box-shadow: $box-shadow-light;
+    border-radius: 4px;
+    box-shadow: $box-shadow;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
     @include breakpoint(sm) {
       height: 425px;
+    }
+
+    &:hover {
+      box-shadow: $box-shadow-hover;
     }
 
     .leistungen__item {
