--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -13,5 +13,6 @@ $transition-time: .15s;
 
 $box-shadow-bottom:  0 10px 10px rgba(0,0,0,0.01), 0 6px 4px rgba(0,0,0,0.13);
 $box-shadow-top:  0 -5px 10px rgba(0, 0, 0, 0.01), 0 -6px 4px rgba(0, 0, 0, 0.13);
-$box-shadow-strong: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+$box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$box-shadow-hover: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 $box-shadow-light: 8px 24px 24px 0 rgba(0,0,0,.09);
