--- a/src/css/components/_hero.scss
+++ b/src/css/components/_hero.scss
@@ -15,8 +15,13 @@
   }
 
   .hero__image {
-    box-shadow: $box-shadow-strong;
+    box-shadow: $box-shadow;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     border-radius: 4px;
+
+    &:hover {
+      box-shadow: $box-shadow-hover;
+    }
 
     img {
       border-radius: 4px;
