--- a/src/css/components/_hero.scss
+++ b/src/css/components/_hero.scss
@@ -14,6 +14,14 @@
     box-shadow: $box-shadow-bottom;
   }
 
+  h2 {
+    margin-bottom: 35px;
+
+    @include breakpoint(sm) {
+      margin-top: 0;
+    }
+  }
+
   .hero__image {
     box-shadow: $box-shadow;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
